@@ -1272,10 +1272,16 @@ static void on_build_menu_item(GtkWidget *w, gpointer user_data)
 	gint grp = GPOINTER_TO_GRP(user_data);
 	gint cmd = GPOINTER_TO_CMD(user_data);
 
+	if (doc && doc->changed)
+	{
+		if (document_need_save_as(doc) && !dialogs_show_save_as())
+			return;
+			
+		if (!document_save_file(doc, FALSE))
+			return;
+	}
 	g_signal_emit_by_name(geany_object, "build-start");
 
-	if (doc && doc->changed)
-		document_save_file(doc, FALSE);
 	if (grp == GEANY_GBG_NON_FT && cmd == GBO_TO_CMD(GEANY_GBO_CUSTOM))
 	{
 		static GtkWidget *dialog = NULL; /* keep dialog for combo history */
