@@ -1,3 +1,10 @@
+2011-09-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/build.c, doc/pluginsignals.c:
+   When saving on build, prompt for a filename if necessary.
+   Emit the "build-start" signal only if saving succeeds.
+
+
 2011-09-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/build.c:
